--- a/MessageBroker/resources/properties/wso2_mb.properties
+++ b/MessageBroker/resources/properties/wso2_mb.properties
@@ -1,4 +1,5 @@
 # WSO2 Message Broker properties
 mbWsURL=https://localhost:9444/services/EventBrokerService
+gregInMBRepoURL=https://localhost:9444/registry
 mbUsername=admin
 mbPassword=admin
